Fix swagger issue
