# gen/http/openapi.yaml
@@ -3,7 +3,7 @@ info:
   title: Task Service
   description: Service for manipulate task data
   version: ""
-host: 0.0.0.0:8001
+host: localhost:8001
 consumes:
 - application/json
 - application/xml
@@ -170,7 +170,7 @@ definitions:
       created_date:
         type: string
         description: Created date
-        example: "1985-01-17T21:56:17Z"
+        example: "1979-05-28T06:40:50Z"
         format: date-time
       description:
         type: string
@@ -180,18 +180,18 @@ definitions:
       due_date:
         type: string
         description: due date
-        example: "1987-05-17T04:21:10Z"
+        example: "1991-06-22T03:24:40Z"
         format: date-time
       id:
         type: string
-        example: Et nobis.
+        example: Quisquam enim nam.
       owner:
         $ref: '#/definitions/StoredUserRequestBodyTiny'
       status:
         type: string
         description: Status.
         default: Open
-        example: Open
+        example: Pending
         enum:
         - Open
         - Closed
@@ -204,25 +204,21 @@ definitions:
       updated_date:
         type: string
         description: Udated date
-        example: "1994-02-13T18:06:11Z"
+        example: "1997-12-20T06:54:20Z"
         format: date-time
     description: A StoredTask describes a task retrieved by the tasks service. (default view)
     example:
       assignee:
         email: ehabterra@hotmail.com
-        isactive: true
-        role: admin
-      created_date: "1984-02-20T17:43:11Z"
+      created_date: "1982-08-23T14:43:43Z"
       description: Task description
-      due_date: "1990-11-30T08:49:45Z"
-      id: Repellat deserunt ipsam.
+      due_date: "2006-05-01T20:22:41Z"
+      id: Error tempore sapiente sequi repellendus.
       owner:
         email: ehabterra@hotmail.com
-        isactive: true
-        role: admin
-      status: Closed
+      status: Open
       title: New task title
-      updated_date: "1978-08-19T04:21:14Z"
+      updated_date: "1983-06-14T09:01:01Z"
     required:
     - id
     - title
@@ -240,7 +236,7 @@ definitions:
       created_date:
         type: string
         description: Created date
-        example: "1979-10-24T20:13:05Z"
+        example: "2003-12-14T22:33:15Z"
         format: date-time
       description:
         type: string
@@ -250,18 +246,18 @@ definitions:
       due_date:
         type: string
         description: due date
-        example: "2012-07-27T06:29:08Z"
+        example: "2007-03-21T03:12:14Z"
         format: date-time
       id:
         type: string
-        example: Veritatis ea assumenda.
+        example: Quos nihil ut.
       owner:
         $ref: '#/definitions/StoredUserResponseTiny'
       status:
         type: string
         description: Status.
         default: Open
-        example: Closed
+        example: Open
         enum:
         - Open
         - Closed
@@ -274,25 +270,21 @@ definitions:
       updated_date:
         type: string
         description: Udated date
-        example: "1981-11-17T13:47:25Z"
+        example: "2014-03-25T17:12:06Z"
         format: date-time
     description: A StoredTask describes a task retrieved by the tasks service. (default view)
     example:
       assignee:
         email: ehabterra@hotmail.com
-        isactive: true
-        role: admin
-      created_date: "1970-08-24T21:22:49Z"
+      created_date: "2011-10-14T13:34:44Z"
       description: Task description
-      due_date: "2004-12-09T16:11:37Z"
-      id: Assumenda eaque accusamus odio architecto.
+      due_date: "1976-08-13T21:31:41Z"
+      id: Totam numquam voluptatem tempora aut non.
       owner:
         email: ehabterra@hotmail.com
-        isactive: true
-        role: admin
-      status: Pending
+      status: Closed
       title: New task title
-      updated_date: "1981-10-04T23:53:12Z"
+      updated_date: "1996-12-20T04:12:19Z"
     required:
     - id
     - title
@@ -334,7 +326,7 @@ definitions:
     example:
       email: ehabterra@hotmail.com
       firstname: Ehab
-      isactive: true
+      isactive: false
       lastname: Terra
       role: admin
     required:
@@ -351,24 +343,11 @@ definitions:
         description: Email of the user
         example: ehabterra@hotmail.com
         pattern: .+@.+\..{1,6}
-      isactive:
-        type: boolean
-        description: Is user active.
-        default: true
-        example: true
-      role:
-        type: string
-        description: user role
-        example: admin
-        pattern: '[a-z]+[a-z0-9]*'
     description: A StoredUser describes a user retrieved by the users service. (default view)
     example:
       email: ehabterra@hotmail.com
-      isactive: true
-      role: admin
     required:
     - email
-    - role
   StoredUserResponseBodyTiny:
     title: 'Mediatype identifier: application/vnd.stored-user; view=default'
     type: object
@@ -378,24 +357,11 @@ definitions:
         description: Email of the user
         example: ehabterra@hotmail.com
         pattern: .+@.+\..{1,6}
-      isactive:
-        type: boolean
-        description: Is user active.
-        default: true
-        example: true
-      role:
-        type: string
-        description: user role
-        example: admin
-        pattern: '[a-z]+[a-z0-9]*'
     description: A StoredUser describes a user retrieved by the users service. (default view)
     example:
       email: ehabterra@hotmail.com
-      isactive: false
-      role: admin
     required:
     - email
-    - role
   StoredUserResponseTiny:
     title: 'Mediatype identifier: application/vnd.stored-user; view=default'
     type: object
@@ -405,24 +371,11 @@ definitions:
         description: Email of the user
         example: ehabterra@hotmail.com
         pattern: .+@.+\..{1,6}
-      isactive:
-        type: boolean
-        description: Is user active.
-        default: true
-        example: true
-      role:
-        type: string
-        description: user role
-        example: admin
-        pattern: '[a-z]+[a-z0-9]*'
     description: A StoredUser describes a user retrieved by the users service. (default view)
     example:
       email: ehabterra@hotmail.com
-      isactive: false
-      role: admin
     required:
     - email
-    - role
   TasksAddRequestBody:
     title: TasksAddRequestBody
     type: object
@@ -432,7 +385,7 @@ definitions:
       created_date:
         type: string
         description: Created date
-        example: "1991-05-02T22:53:01Z"
+        example: "2011-04-19T20:31:05Z"
         format: date-time
       description:
         type: string
@@ -442,99 +395,10 @@ definitions:
       due_date:
         type: string
         description: due date
-        example: "1971-06-21T01:35:39Z"
+        example: "2010-09-25T21:35:53Z"
         format: date-time
       owner:
         $ref: '#/definitions/StoredUserRequestBody'
-      status:
-        type: string
-        description: Status.
-        default: Open
-        example: Closed
-        enum:
-        - Open
-        - Closed
-        - Pending
-      title:
-        type: string
-        description: Title of the task
-        example: New task title
-        maxLength: 200
-      updated_date:
-        type: string
-        description: Udated date
-        example: "1999-03-30T17:21:57Z"
-        format: date-time
-    example:
-      assignee:
-        email: ehabterra@hotmail.com
-        firstname: Ehab
-        isactive: false
-        lastname: Terra
-        role: admin
-      created_date: "2006-08-29T13:00:04Z"
-      description: Task description
-      due_date: "2001-04-03T23:28:08Z"
-      owner:
-        email: ehabterra@hotmail.com
-        firstname: Ehab
-        isactive: false
-        lastname: Terra
-        role: admin
-      status: Pending
-      title: New task title
-      updated_date: "1998-07-23T07:25:03Z"
-    required:
-    - title
-    - description
-    - created_date
-    - updated_date
-    - status
-  TasksShowNotFoundResponseBody:
-    title: TasksShowNotFoundResponseBody
-    type: object
-    properties:
-      id:
-        type: string
-        description: ID of missing task
-        example: Non vel tempora.
-      message:
-        type: string
-        description: Message of error
-        example: task 1 not found
-    description: Task not found
-    example:
-      id: Sint soluta quis numquam natus.
-      message: task 1 not found
-    required:
-    - message
-    - id
-  TasksShowResponseBody:
-    title: 'Mediatype identifier: application/vnd.stored-task; view=default'
-    type: object
-    properties:
-      assignee:
-        $ref: '#/definitions/StoredUserResponseBodyTiny'
-      created_date:
-        type: string
-        description: Created date
-        example: "1983-04-19T19:33:42Z"
-        format: date-time
-      description:
-        type: string
-        description: Description of the task
-        example: Task description
-        maxLength: 5000
-      due_date:
-        type: string
-        description: due date
-        example: "1974-11-19T09:38:49Z"
-        format: date-time
-      id:
-        type: string
-        example: Soluta rerum nihil.
-      owner:
-        $ref: '#/definitions/StoredUserResponseBodyTiny'
       status:
         type: string
         description: Status.
@@ -552,25 +416,110 @@ definitions:
       updated_date:
         type: string
         description: Udated date
-        example: "1977-12-02T23:24:14Z"
+        example: "2011-08-10T10:33:51Z"
+        format: date-time
+    example:
+      assignee:
+        email: ehabterra@hotmail.com
+        firstname: Ehab
+        isactive: false
+        lastname: Terra
+        role: admin
+      created_date: "1977-11-14T02:34:04Z"
+      description: Task description
+      due_date: "2015-03-28T22:38:24Z"
+      owner:
+        email: ehabterra@hotmail.com
+        firstname: Ehab
+        isactive: false
+        lastname: Terra
+        role: admin
+      status: Open
+      title: New task title
+      updated_date: "1982-08-31T00:06:20Z"
+    required:
+    - title
+    - description
+    - created_date
+    - updated_date
+    - status
+  TasksShowNotFoundResponseBody:
+    title: TasksShowNotFoundResponseBody
+    type: object
+    properties:
+      id:
+        type: string
+        description: ID of missing task
+        example: Excepturi eos autem.
+      message:
+        type: string
+        description: Message of error
+        example: task 1 not found
+    description: Task not found
+    example:
+      id: Accusamus omnis suscipit laudantium.
+      message: task 1 not found
+    required:
+    - message
+    - id
+  TasksShowResponseBody:
+    title: 'Mediatype identifier: application/vnd.stored-task; view=default'
+    type: object
+    properties:
+      assignee:
+        $ref: '#/definitions/StoredUserResponseBodyTiny'
+      created_date:
+        type: string
+        description: Created date
+        example: "1977-10-27T16:39:42Z"
+        format: date-time
+      description:
+        type: string
+        description: Description of the task
+        example: Task description
+        maxLength: 5000
+      due_date:
+        type: string
+        description: due date
+        example: "1983-09-09T14:40:50Z"
+        format: date-time
+      id:
+        type: string
+        example: Sequi minima vero sunt laudantium voluptatibus dolor.
+      owner:
+        $ref: '#/definitions/StoredUserResponseBodyTiny'
+      status:
+        type: string
+        description: Status.
+        default: Open
+        example: Closed
+        enum:
+        - Open
+        - Closed
+        - Pending
+      title:
+        type: string
+        description: Title of the task
+        example: New task title
+        maxLength: 200
+      updated_date:
+        type: string
+        description: Udated date
+        example: "2000-11-14T23:54:33Z"
         format: date-time
     description: ShowResponseBody result type (default view)
     example:
       assignee:
         email: ehabterra@hotmail.com
-        isactive: true
-        role: admin
-      created_date: "1993-04-30T03:22:22Z"
+      created_date: "1978-08-19T14:54:44Z"
       description: Task description
-      due_date: "1995-12-17T05:58:59Z"
-      id: Ut quam et et soluta aut.
+      due_date: "1974-10-19T17:22:31Z"
+      id: Excepturi amet a culpa ea aspernatur.
       owner:
         email: ehabterra@hotmail.com
-        isactive: true
-        role: admin
-      status: Open
+      status: Closed
       title: New task title
-      updated_date: "2012-08-27T05:38:07Z"
+      updated_date: "2000-03-11T00:58:30Z"
     required:
     - id
     - title
@@ -586,7 +535,7 @@ definitions:
       id:
         type: string
         description: ID of task
-        example: Rerum inventore molestiae id.
+        example: Voluptatem qui consequatur.
       status:
         type: string
         description: Status.
@@ -597,8 +546,8 @@ definitions:
         - Closed
         - Pending
     example:
-      id: Eos molestias et occaecati suscipit consequuntur voluptatem.
-      status: Pending
+      id: Et minima ea eos soluta ad blanditiis.
+      status: Open
     required:
     - id
     - status
@@ -611,46 +560,34 @@ definitions:
     example:
     - assignee:
         email: ehabterra@hotmail.com
-        isactive: true
-        role: admin
       created_date: "1996-03-10T20:29:26Z"
       description: Task description
       due_date: "1976-10-01T06:43:23Z"
       id: Possimus pariatur velit velit odit.
       owner:
         email: ehabterra@hotmail.com
-        isactive: true
-        role: admin
       status: Closed
       title: New task title
       updated_date: "1988-01-13T14:41:45Z"
     - assignee:
         email: ehabterra@hotmail.com
-        isactive: true
-        role: admin
       created_date: "1996-03-10T20:29:26Z"
       description: Task description
       due_date: "1976-10-01T06:43:23Z"
       id: Possimus pariatur velit velit odit.
       owner:
         email: ehabterra@hotmail.com
-        isactive: true
-        role: admin
       status: Closed
       title: New task title
       updated_date: "1988-01-13T14:41:45Z"
     - assignee:
         email: ehabterra@hotmail.com
-        isactive: true
-        role: admin
       created_date: "1996-03-10T20:29:26Z"
       description: Task description
       due_date: "1976-10-01T06:43:23Z"
       id: Possimus pariatur velit velit odit.
       owner:
         email: ehabterra@hotmail.com
-        isactive: true
-        role: admin
       status: Closed
       title: New task title
       updated_date: "1988-01-13T14:41:45Z"
